get comments/posts/boosts user
